fixed issue with last sprint not showing cards

--- a/sprints/css/style.css
+++ b/sprints/css/style.css
@@ -37,6 +37,11 @@ body {
 }
 .global-header .date-time .time{ padding-left:15px; }
 
+.item {
+    top:-110px;
+    position: relative;
+}
+
 .sprint-title {
   background: #f5f5f5;
   padding: 5px 30px;
